Try to fix #58 - Custom Scrollbars across whole page

--- a/css/editor.css
+++ b/css/editor.css
@@ -35,6 +35,15 @@ html, body {
     background: #fafafa !important;
 }
 
+/* SCROLLBARS */
+::-webkit-scrollbar { width: 15px !important; }
+::-webkit-scrollbar-track { background: white !important; }
+::-webkit-scrollbar-thumb {
+     background: #ddd !important;
+     border-radius: 0px !important; }
+::-webkit-scrollbar-thumb:hover {
+ background: #999 !important; }
+
 /*
 ICONS
 */
